--- a/frontend/src/config/core.scss
+++ b/frontend/src/config/core.scss
@@ -5,7 +5,6 @@
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    background-color: black;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -25,13 +24,14 @@ section {
 
 body {
     height: 100%;
-    padding:150px 20px 0px 230px;
-    color:white;
+    padding: 150px 20px 0px 230px;
 }
-a{
+
+a {
     text-decoration: none;
-    color:white;
+    color: black;
 }
+
 ol,
 ul {
     list-style: none;
