--- a/frontend/src/pages/Account/css/index.scss
+++ b/frontend/src/pages/Account/css/index.scss
@@ -1,88 +1,29 @@
 #root {
     .account-page {
         &>.account-section {
+            width: 767px;
+            margin: 0 auto;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            row-gap: 22px;
 
             &>.title {
-                font-size: 29px;
+                text-align: center;
+                font-size: 33px;
+                color: rgba(2, 123, 255, 1);
                 font-weight: 700;
             }
 
-            &>.account-info-wrapper {
-                &>.input-wrapper {
+            &>.account-wrapper {
+                &>.form-wrapper {
+                    width: 100%;
                     display: flex;
                     flex-direction: column;
-                    row-gap: 20px;
-                    align-items: center;
 
-                    &>.profile-img-choice {
-                        width: 75px;
-                        height: 75px;
-                        border-radius: 50%;
-                        position: relative;
-                        border: 1px solid rgba(255, 255, 255, 0.5);
-                        margin-top: 11px;
+                    // row-gap: 22px;
 
-                        img {
-                            width: 75px;
-                            height: 75px;
-                            border-radius: 50%;
-
-                        }
-
-                        svg {
-                            font-size: 22px;
-                            position: absolute;
-                            left: 25px;
-                            top: 25px;
-                            color: white;
-                        }
-                    }
-
-                    &>.img-cancel {
-                        cursor: pointer;
-                        font-weight: 700;
-                    }
-
-
-
-                    input::placeholder {
-                        color: white;
-                    }
-
-                    &>input {
-                        outline: none;
-                        width: 350px;
-                        height: 50px;
-                        border-radius: 10px;
-                        color: white;
-                        padding-left: 7px;
-                        box-sizing: border-box;
-                        border: 1px solid #AAAA;
-
-                    }
-
-                    [type="file"] {
-                        display: none;
-                    }
-
-                    &>.account-button {
-                        background-color: white;
-                        width: 222px;
-                        height: 44px;
-                        margin: 0 auto;
-                        color: black;
-                        font-weight: 700;
-                        font-size: 19px;
-                    }
-
-                    &>.err-msg {
-                        color: red;
-                        font-weight: 800;
-                    }
                 }
+
 
             }
         }
