--- a/frontend/src/components/Sidebar/css/index.css
+++ b/frontend/src/components/Sidebar/css/index.css
@@ -1,6 +1,5 @@
 #root .sidebar-wrapper {
   padding: 120px 0px 0px 10px;
-  color: white;
   position: fixed;
   z-index: 0;
   top: 0;
@@ -54,10 +53,9 @@
 }
 #root .sidebar-wrapper > .container > .sidebar-menu-wrapper > .menu-wrapper > .menu-lists > .menu-list:hover svg,
 #root .sidebar-wrapper > .container > .sidebar-menu-wrapper > .menu-wrapper > .menu-lists > .menu-list:hover a {
-  color: rgba(255, 255, 255, 0.7);
+  color: black;
 }
 #root .sidebar-wrapper > .container > .sidebar-menu-wrapper > .menu-wrapper > .menu-lists > .menu-list a {
-  color: white;
   font-size: 14px;
 }
 #root .sidebar-wrapper > .container > .sidebar-menu-wrapper > .menu-wrapper > .menu-lists > .menu-list > .subscribe-profile {
