--- a/frontend/src/components/Sidebar/css/index.scss
+++ b/frontend/src/components/Sidebar/css/index.scss
@@ -1,11 +1,11 @@
 #root {
     .sidebar-wrapper {
         padding: 120px 0px 0px 10px;
-        color: white;
-        position:fixed;
-        z-index:0;
-        top:0;
-        left:0;
+        position: fixed;
+        z-index: 0;
+        top: 0;
+        left: 0;
+
         &>.container {
             width: 200px;
             height: 100vh;
@@ -16,6 +16,7 @@
                 display: flex;
                 flex-direction: column;
                 row-gap: 53px;
+
                 &>.menu-wrapper {
                     &>.title {
                         padding-bottom: 10px;
@@ -36,23 +37,24 @@
                             display: flex;
                             column-gap: 10px;
                             align-items: center;
+
                             &:hover {
 
                                 svg,
                                 a {
-                                    color: rgba(255, 255, 255, 0.7);
+                                    color: black;
                                 }
                             }
 
                             svg {}
 
                             a {
-                                color: white;
-                                font-size:14px;
+                                font-size: 14px;
                             }
-                            &>.subscribe-profile{
+
+                            &>.subscribe-profile {
                                 width: 25px;
-                                height:25px;
+                                height: 25px;
                                 border-radius: 50%;
                                 background-color: gray;
                             }
