--- a/frontend/src/pages/Account/css/index.css
+++ b/frontend/src/pages/Account/css/index.css
@@ -1,4 +1,6 @@
 #root .account-page > .account-section {
+  width: 767px;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6,15 +8,16 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  row-gap: 22px;
 }
 #root .account-page > .account-section > .title {
-  font-size: 29px;
+  text-align: center;
+  font-size: 33px;
+  color: rgb(2, 123, 255);
   font-weight: 700;
 }
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper {
+#root .account-page > .account-section > .account-wrapper > .form-wrapper {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,74 +25,4 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  row-gap: 20px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper > .profile-img-choice {
-  width: 75px;
-  height: 75px;
-  border-radius: 50%;
-  position: relative;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  margin-top: 11px;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper > .profile-img-choice img {
-  width: 75px;
-  height: 75px;
-  border-radius: 50%;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper > .profile-img-choice svg {
-  font-size: 22px;
-  position: absolute;
-  left: 25px;
-  top: 25px;
-  color: white;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper > .img-cancel {
-  cursor: pointer;
-  font-weight: 700;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper input::-webkit-input-placeholder {
-  color: white;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper input::-moz-placeholder {
-  color: white;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper input:-ms-input-placeholder {
-  color: white;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper input::-ms-input-placeholder {
-  color: white;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper input::placeholder {
-  color: white;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper > input {
-  outline: none;
-  width: 350px;
-  height: 50px;
-  border-radius: 10px;
-  color: white;
-  padding-left: 7px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border: 1px solid rgba(170, 170, 170, 0.6666666667);
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper [type=file] {
-  display: none;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper > .account-button {
-  background-color: white;
-  width: 222px;
-  height: 44px;
-  margin: 0 auto;
-  color: black;
-  font-weight: 700;
-  font-size: 19px;
-}
-#root .account-page > .account-section > .account-info-wrapper > .input-wrapper > .err-msg {
-  color: red;
-  font-weight: 800;
 }
